assets: fix vertical alignment of "x" icon in filter remove button

--- a/assets/src/components/routes/ActionWrapper/Action.css
+++ b/assets/src/components/routes/ActionWrapper/Action.css
@@ -225,7 +225,7 @@
 
 .action__filters-remove-condition sl-icon {
 	position: relative;
-	top: 2px;
+	top: 1px;
 	font-size: 15px;
 }
 
